gcc/testsuite/gdc.test/fail_compilation/moduleundefuda.d
/*
TEST_OUTPUT:
---
fail_compilation/moduleundefuda.d(7): Error: undefined identifier `undef`
---
*/
@undef module moduleundefuda;
